@@ -1,3 +1,7 @@
+2017-11-07         John E. Malmberg      <wb8tyw@qsl.net>
+
+	* Remove varargs.h usage in snprintf.c
+
 2017-10-19         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* 4.2.0: Release tar ball made.
